@@ -5,7 +5,9 @@
  * For commercial licenses see https://www.tiny.cloud/
  */
 
+import { Obj } from '@ephox/katamari';
 import Editor from 'tinymce/core/api/Editor';
+import { SchemaMap } from 'tinymce/core/api/html/Schema';
 import { create, defaultData, ImageData, isFigure, read, write } from './ImageData';
 import * as Utils from './Utils';
 
@@ -33,8 +35,16 @@ const getSelectedImage = (editor: Editor): HTMLElement => {
 
 const splitTextBlock = (editor: Editor, figure: HTMLElement) => {
   const dom = editor.dom;
+  const textBlockElements: SchemaMap = Obj.filter(
+    editor.schema.getTextBlockElements(),
+    (_, parentElm) => !editor.schema.isValidChild(parentElm, 'figure')
+  );
 
-  const textBlock = dom.getParent(figure.parentNode, (node: Node) => !!editor.schema.getTextBlockElements()[node.nodeName], editor.getBody());
+  const textBlock = dom.getParent(
+    figure.parentNode,
+    (node: Node) => Obj.hasNonNullableKey(textBlockElements, node.nodeName),
+    editor.getBody()
+  );
 
   if (textBlock) {
     return dom.split(textBlock, figure);
